[VEG-125] feat: add delete user
